--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     
     <div class="main">
         <div class="navbar">
-            <div calss="logo">
-                <img src="png-transparent-career-portfolio-artist-s-portfolio-portfolio-miscellaneous-angle-kitchen-thumbnail.png" >
-            </div>
+            <!-- <div calss="logo">
+                <img src="happy-young-man-with-laptop-isolated-white.png" >
+            </div> -->
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">SKILLS</a></li>
                 <li><a href="#">MY WORKS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
 
